client/src/index.css
:root {
  --home-height: calc(100vh - 78px);
  --gestalt-blue: #0074E8;
  --fb-light-gray: #F0F2F5;
  --left-right-margin: 8%; /* adjust the entire page's margins automatically */
}


body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
  font-family: sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* width: 100vw; */
  /* overflow-y: auto; */
} 

#root {
  background-color: var(--fb-light-gray);
}

/* Updating the Scroll Bar */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #888; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555; 
}
/* Scroll Bar End */


code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#header {
  display: flex;
  flex-direction: row;
  width: 100%;
  padding: 2px var(--left-right-margin);
  position: fixed;
  background-color: white;
  z-index: 5; 
  box-shadow: 0px 2px 4px lightgray; 
  font-family: sans-serif;
}

#top-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 20px;
  font-family: sans-serif;
}

#welcome-container {
  display: flex; 
  height: calc(100vh - 0px);
  width: 100%;
  justify-content: left;
  min-height: 100vh;
  min-width: 100vw;
  background-color: white;
}

#welcome-container-right {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  margin-left: 50px;
}

#welcome-title {
  margin-bottom: 50px;
  font-size: 50px;
}


#box {
  width: 50%;
  max-height: calc(100vh - 0px);
  overflow: hidden;
}


#login-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 80%;
}

.copy-button {
  border: 0;
  min-width: 60px;
  box-sizing: border-box;
  min-height: 48px;
  background-color: #EFEFEF;
  cursor: pointer;
  border-radius: 24px;
  color: #111111;
  text-align: center;
  align-items: flex-start;
  font-weight: 700;
  /* font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol; */
  font-family: sans-serif;
  box-sizing: inherit;
  font-size: 16px;
  display: flex;
  justify-content: center;

}

.copy-button:hover {
  background-color: #e2e2e2;

} 


/* LEFT NAV BAR */


.left-bar {
  position: fixed;
  width: 230px;
  height: 100vh;
  margin-left: var(--left-right-margin);
  margin-top: 78px;
  z-index: 4;
  background-color: var(--fb-light-gray);
}

#left-nav-bar {
  display: flex;
  width: 100%;
  justify-content: center;
  flex-direction: column;
  padding-top: 30px;
  z-index: 4;
}

.left-nav-item {
  display: flex;
  justify-content: left;
}

.left-nav-button {
  border: 0;
  min-width: 60px;
  box-sizing: border-box;
  min-height: 48px;
  background-color: transparent;
  cursor: pointer;
  border-radius: 24px;
  color: #111111;
  text-align: center;
  align-items: flex-start;
  font-weight: 400; /* had this at 700 but too big */
  font-weight: bold;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  /* font-family: sans-serif; */
  box-sizing: inherit;
  font-size: 22px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1px 16px;
  transition: .3s;
}

.left-nav-button:hover {
  background-color: rgba(0,0,0,0.06);
  color: var(--gestalt-blue);
}

.nav-active {
  color: var(--gestalt-blue);
} 

#create-post {
  background-color: #007fE8;
  color: white; 
  font-size: 18px; 
  padding-left: 35px; 
  padding-right: 35px;
  box-shadow: 3px 3px 4px gray;
}

#create-post:hover {
  background-color: #006dc7;
}

/* END LEFT NAV BAR */

.topic-container {
  display: flex;
  margin-left: var(--left-right-margin);
  padding-left: 230px;
  padding-top: 78px;
  margin-right: var(--left-right-margin);
  min-height: 100vh;
  background-color: var(--fb-light-gray);
} 


.middle-bar {
  margin-right: 340px;
  position: relative;
  min-width: 350px;
  width: 100%;
  /* padding-left: 40px; */
  /* background-color: blueviolet; */
  min-height: 150vh;
  z-index: 3;
} 



.right-bar {
  /* background-color: #ffffffd3; */
  position: fixed;
  /* min-width: 340px; */
  padding-left: 40px;
  right: var(--left-right-margin);
  height: 100vh;
  overflow: hidden;
  min-width: 340px;
  width: 340px;
  z-index: 0;
  margin-bottom: 40px;
} 

.right-bar:hover {
  overflow-y: scroll;
  /* width */
}


#menu {
  z-index: 99;
}

#feed-container {
  display: flex;
  padding: 5px 40px;
  width: 100%;
  flex-direction: column;
  justify-content: center;
}

.feed-card {
  display: flex;
  justify-content: center;
  margin: 20px 0px;
}

.search-selection {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.search-nav {
  padding: 20px;
}

.search-container {
  
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

}

